--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <main> 
+        <header>
+            <div class="banner-container">
+                <h1 class="banner-heading">All Thinks Are Possible If You believe</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button>Contact Us</button>
+            </div>
+        </header>
+    </main>
 </body>
 </html>
