--- a/index.html
+++ b/index.html
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <main> 
-        <header>
-            <div class="banner-container">
-                <h1 class="banner-heading">All Thinks Are Possible If You believe</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-                <button>Contact Us</button>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/76114addde.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <div class="banner-container">
+        <h1 class="banner-heading">All Thinks Are Possible If You believe</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <button>Contact Us</button>
+      </div>
+    </header>
+    <main>
+      <!-- First Section -->
+      <section>
+        <div class="section-container">
+          <div class="person-img">
+            <img src="./images/person.png" alt="" />
+          </div>
+          <div class="person-details">
+            <h1>My failures of previous year</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <div class="person-info">
+              <p>
+                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to
+                popular belief, is not simply.
+              </p>
+              <p>
+                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular belief.
+              </p>
+              <p>
+                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular , is not simply.
+              </p>
+              <p>
+                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.
+              </p>
+              <p>
+                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular simply.
+              </p>
             </div>
-        </header>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
