watches section added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
             </div>
         </div>
       </section>
+
+      <!-- watch section -->
+      <section class="watch-container">
+        <div class="watchs">
+          <h1>Awlays keep a positive mindset</h1>
+          <button>Call Now</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
