--- a/index.html
+++ b/index.html
@@ -39,20 +39,34 @@
             </p>
             <div class="person-info">
               <p>
-                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to
-                popular belief, is not simply.
+                <span class="check-icon"
+                  ><i class="fa-solid fa-check"></i
+                ></span>
+                Contrary to popular belief, is not simply.
               </p>
               <p>
-                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular belief.
+                <span class="check-icon"
+                  ><i class="fa-solid fa-check"></i
+                ></span>
+                Contrary to popular belief.
               </p>
               <p>
-                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular , is not simply.
+                <span class="check-icon"
+                  ><i class="fa-solid fa-check"></i
+                ></span>
+                Contrary to popular , is not simply.
               </p>
               <p>
-                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.
+                <span class="check-icon"
+                  ><i class="fa-solid fa-check"></i
+                ></span>
+                Contrary to popular belief, is not simply.
               </p>
               <p>
-                <span class="check-icon"><i class="fa-solid fa-check"></i></span> Contrary to popular simply.
+                <span class="check-icon"
+                  ><i class="fa-solid fa-check"></i
+                ></span>
+                Contrary to popular simply.
               </p>
             </div>
           </div>
@@ -62,26 +76,26 @@
       <section class="plans-container">
         <h1 class="plans-header">My Plans</h1>
         <div class="plans">
-            <div class="plan">
-                <img src="./images/icons/web.png" alt="">
-                <h2>Web Development</h2>
-                <p>I want to start</p>
-            </div>
-            <div class="plan">
-                <img src="./images/icons/js.png" alt="">
-                <h2>Javascript</h2>
-                <p>I want to learn</p>
-            </div>
-            <div class="plan">
-                <img src="./images/icons/ecom.png" alt="">
-                <h2>Smoking Habit</h2>
-                <p>I want to end</p>
-            </div>
-            <div class="plan">
-                <img src="./images/icons/smoke.png" alt="">
-                <h2>Ecommerce</h2>
-                <p>I want to develop</p>
-            </div>
+          <div class="plan">
+            <img src="./images/icons/web.png" alt="" />
+            <h2>Web Development</h2>
+            <p>I want to start</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/js.png" alt="" />
+            <h2>Javascript</h2>
+            <p>I want to learn</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h2>Smoking Habit</h2>
+            <p>I want to end</p>
+          </div>
+          <div class="plan">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h2>Ecommerce</h2>
+            <p>I want to develop</p>
+          </div>
         </div>
       </section>
 
@@ -93,5 +107,30 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="sub-footer">
+        <h1>Future</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <div class="contact">
+          <p>Email : info@gmail.com</p>
+          <p>Phone : 01500 00 00 00</p>
+        </div>
+        <div class="logos">
+          <div class="logo"><img src="./images/icons/fb.png" alt="facebook"></div>
+          <div class="logo"><img src="./images/icons/twitter.png" alt="twitter"></div>
+          <div class="logo"><img src="./images/icons/youtube.png" alt="youtube"></div>
+        </div>
+      </div>
+      <div class="sub-footer">
+        <h1>Subscribe</h1>
+        <input class="subs-input" type="text" placeholder="Enter your email">
+        <br>
+        <button class="subs-btn">Subscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
