extra section added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,22 @@
           <button>Call Now</button>
         </div>
       </section>
+         <!-- Extra part -->
+    <section class="extra-page">
+      <div>
+          <img class="feedback-img"
+              src="images/customer-review-concept-with-people-gives-stars-ratings-positive-feedback-isometric-illustration_138260-962.webp"
+              alt="">
+      </div>
+      <div class="feedback-contant">
+          <h1 class="feedback-header">Give your feedback to us</h1>
+          <p class="feedback-text">In-Sha-Allah It will help us to reinforce positive habits and encourages more of the performance that you
+              want to see.</p>
+              <br>
+          <a target="_blank" class="link-button" href="">Feedback</a>
+      </div>
+  </section>
+
     </main>
     <footer>
       <div class="sub-footer">
