--- a/index.html
+++ b/index.html
@@ -106,22 +106,25 @@
           <button>Call Now</button>
         </div>
       </section>
-         <!-- Extra part -->
-    <section class="extra-page">
-      <div>
-          <img class="feedback-img"
-              src="images/customer-review-concept-with-people-gives-stars-ratings-positive-feedback-isometric-illustration_138260-962.webp"
-              alt="">
-      </div>
-      <div class="feedback-contant">
+      <!-- Extra part -->
+      <section class="extra-page">
+        <div>
+          <img
+            class="feedback-img"
+            src="images/customer-review-concept-with-people-gives-stars-ratings-positive-feedback-isometric-illustration_138260-962.webp"
+            alt=""
+          />
+        </div>
+        <div class="feedback-contant">
           <h1 class="feedback-header">Give your feedback to us</h1>
-          <p class="feedback-text">In-Sha-Allah It will help us to reinforce positive habits and encourages more of the performance that you
-              want to see.</p>
-              <br>
+          <p class="feedback-text">
+            In-Sha-Allah It will help us to reinforce positive habits and
+            encourages more of the performance that you want to see.
+          </p>
+          <br />
           <a target="_blank" class="link-button" href="">Feedback</a>
-      </div>
-  </section>
-
+        </div>
+      </section>
     </main>
     <footer>
       <div class="sub-footer">
@@ -136,15 +139,21 @@
           <p>Phone : 01500 00 00 00</p>
         </div>
         <div class="logos">
-          <div class="logo"><img src="./images/icons/fb.png" alt="facebook"></div>
-          <div class="logo"><img src="./images/icons/twitter.png" alt="twitter"></div>
-          <div class="logo"><img src="./images/icons/youtube.png" alt="youtube"></div>
+          <div class="logo">
+            <img src="./images/icons/fb.png" alt="facebook" />
+          </div>
+          <div class="logo">
+            <img src="./images/icons/twitter.png" alt="twitter" />
+          </div>
+          <div class="logo">
+            <img src="./images/icons/youtube.png" alt="youtube" />
+          </div>
         </div>
       </div>
       <div class="sub-footer">
         <h1>Subscribe</h1>
-        <input class="subs-input" type="text" placeholder="Enter your email">
-        <br>
+        <input class="subs-input" type="text" placeholder="Enter your email" />
+        <br />
         <button class="subs-btn">Subscribe</button>
       </div>
     </footer>
